# the-garden

./: .gitignore  .session.vim  compile_and_run.sh
.cache/clangd/index/: SDL_image.h.A7380A1B85CBEF92.idx  core.cpp.982E4D5314790376.idx  core.h.E338621573EE0061.idx  definitions.hpp.068B34231B34043F.idx  game_data.hpp.6E6F3777E5B8BB52.idx  log.cpp.2D3C6676F9BEB507.idx  log.h.0402B735D538337C.idx  main.cpp.2579A6EF78C7DB0E.idx  texture_manager.cpp.F936D4C55A750D50.idx  texture_manager.h.B28B6D67A4666F08.idx  ticks_management.hpp.1B311E3687323493.idx  tile.cpp.07D5836AAD06B799.idx  tile.h.1BE0C0C9D1250F21.idx  tile_map.cpp.FAA48F17CF7DAE75.idx  tile_map.h.4CC33906EB33AE9B.idx  vec.hpp.0DC928B6ADE1D160.idx
src/: CMakeLists.txt  core.cpp  core.h  definitions.hpp  game_data.hpp  log.cpp  log.h  main.cpp  texture.hpp  texture_manager.cpp  texture_manager.h  ticks_management.hpp  tile.h  tile_map.cpp  tile_map.h  vec.hpp
src/ecs/: ecs.cpp  ecs.hpp  entities_manager.cpp  entities_manager.h
src/ecs/components/: PositionComponent.hpp  RenderComponent.hpp
